--- a/MMM-CSSBackgrounds.css
+++ b/MMM-CSSBackgrounds.css
@@ -1678,9 +1678,9 @@ html.shootingstars body  .shooting_star:nth-child(20)::before, html.shootingstar
 Sliding Diagonal by Chris Smith https://codepen.io/chris22smith/pen/RZogMa (Slightly modified)
 */
 
-body.slidingdiagonal .bg {
+html.slidingdiagonal .bg {
   animation:slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, rgb(256,256,256, 0.1) 50%, rgb(256,256,256, 0.05) 50%);
+  background-image: linear-gradient(-60deg, #090A0F 50%, #111D2B 50%);
   bottom:0;
   left:-50%;
   opacity:.5;
@@ -1690,14 +1690,15 @@ body.slidingdiagonal .bg {
   z-index:-1;
 }
 
-body.slidingdiagonal .bg2 {
+.bg2 {
   animation-direction:alternate-reverse;
   animation-duration:4s;
 }
 
-body.slidingdiagonal .bg3 {
+.bg3 {
   animation-duration:5s;
 }
+
 
 @keyframes slide {
   0% {
@@ -1707,6 +1708,7 @@ body.slidingdiagonal .bg3 {
     transform:translateX(25%);
   }
 }
+
 
 /*
 Lava Lamp by https://codepen.io/Rosefae/pen/XPaMYL (Heavily modified)
