Updates from local testing.
Updates to CSS, fixes to main JS.

--- a/MMM-CSSBackgrounds.njk
+++ b/MMM-CSSBackgrounds.njk
@@ -284,6 +284,32 @@ We use simple "if" statements to show these.
 {% endif %}
 
 
+{# -------------- Bbubbles -------------- #}
+{% if config.theme =="bubbles" %}
+<div class="bottom-particles">
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+</div>
+{% endif %}
+
 
 
 {# -------------- Close Wrapper -------------- #}
