--- a/MMM-CSSBackgrounds.css
+++ b/MMM-CSSBackgrounds.css
@@ -1889,10 +1889,14 @@ html.shootingstars body  .shooting_star:nth-child(20)::before, html.shootingstar
 /* 
 Sliding Diagonal by Chris Smith https://codepen.io/chris22smith/pen/RZogMa (Slightly modified)
 */
+html.slidingdiagonal body {
+
+}
 
 html.slidingdiagonal .bg {
-  animation:slide 3s ease-in-out infinite alternate;
+  animation:bgslide 3s ease-in-out infinite alternate;
   background-image: linear-gradient(-60deg, #090A0F 50%, #111D2B 50%);
+  bottom:0;
   left:-50%;
   opacity:.5;
   position:fixed;
@@ -1910,7 +1914,8 @@ html.slidingdiagonal .bg3 {
   animation-duration:5s;
 }
 
-@keyframes slide {
+
+@keyframes bgslide {
   0% {
     transform:translateX(-25%);
   }
@@ -1918,7 +1923,6 @@ html.slidingdiagonal .bg3 {
     transform:translateX(25%);
   }
 }
-
 /*
 Lava Lamp by https://codepen.io/Rosefae/pen/XPaMYL (Heavily modified)
 */
